[gd_scene load_steps=19 format=2]

[ext_resource path="res://entities/player/player.gd" type="Script" id=1]
[ext_resource path="res://entities/player/scripts/input_controller.gd" type="Script" id=3]
[ext_resource path="res://libs/character_mover/character_mover.gd" type="Script" id=4]
[ext_resource path="res://libs/state_machine/state_machine.gd" type="Script" id=5]
[ext_resource path="res://entities/player/states/sleep.gd" type="Script" id=6]
[ext_resource path="res://assets/images/player-sheet.png" type="Texture" id=7]
[ext_resource path="res://entities/player/states/move.gd" type="Script" id=8]
[ext_resource path="res://entities/player/states/infect.gd" type="Script" id=9]
[ext_resource path="res://entities/player/states/die.gd" type="Script" id=10]
[ext_resource path="res://entities/player/scripts/triggers.gd" type="Script" id=11]
[ext_resource path="res://entities/player/scripts/graphics.gd" type="Script" id=12]
[ext_resource path="res://entities/player/scripts/stats.gd" type="Script" id=13]
[ext_resource path="res://entities/player/scripts/infect_pivot.gd" type="Script" id=14]

[sub_resource type="Animation" id=1]
resource_name = "default"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("main:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("infect_pivot/infect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("main:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("infect_pivot/infect:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "infect"
tracks/0/type = "value"
tracks/0/path = NodePath("main:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("infect_pivot/infect:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 17, 33 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("infect_pivot/infect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "walk"
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("main:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("main:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("infect_pivot/infect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 40, 40 )

[sub_resource type="CircleShape2D" id=5]
radius = 32.0

[node name="Player" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 10
script = ExtResource( 1 )

[node name="InputController" type="Node" parent="."]
script = ExtResource( 3 )

[node name="CharacterMover" type="Node" parent="."]
script = ExtResource( 4 )
body_path = NodePath("..")

[node name="Stats" type="Node" parent="."]
script = ExtResource( 13 )

[node name="Graphics" type="Node2D" parent="."]
script = ExtResource( 12 )
__meta__ = {
"_edit_lock_": true
}

[node name="main" type="Sprite" parent="Graphics"]
visible = false
rotation = 1.5708
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 7 )
vframes = 2
hframes = 17
frame = 10
__meta__ = {
"_edit_lock_": true
}

[node name="infect_pivot" type="Node2D" parent="Graphics"]
script = ExtResource( 14 )
__meta__ = {
"_edit_lock_": true
}

[node name="infect" type="Sprite" parent="Graphics/infect_pivot"]
rotation = 1.5708
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 7 )
vframes = 2
hframes = 17
frame = 17
__meta__ = {
"_edit_lock_": true
}

[node name="Tween" type="Tween" parent="Graphics/infect_pivot"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Graphics"]
autoplay = "default"
anims/default = SubResource( 1 )
anims/infect = SubResource( 2 )
anims/walk = SubResource( 3 )

[node name="Effects" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Triggers" type="Node2D" parent="."]
script = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}
body_path = NodePath("..")

[node name="MouseHurtbox" type="Area2D" parent="Triggers"]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Triggers/MouseHurtbox"]
visible = false
shape = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="InfectRay" type="RayCast2D" parent="Triggers"]
enabled = true
cast_to = Vector2( 64, 0 )
collision_mask = 6
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 5 )
actor_path = NodePath("..")

[node name="move" type="Node" parent="StateMachine"]
script = ExtResource( 8 )
fsm_path = NodePath("..")

[node name="infect" type="Node" parent="StateMachine"]
script = ExtResource( 9 )
fsm_path = NodePath("..")

[node name="die" type="Node" parent="StateMachine"]
script = ExtResource( 10 )
fsm_path = NodePath("..")

[node name="sleep" type="Node" parent="StateMachine"]
script = ExtResource( 6 )
fsm_path = NodePath("..")
[connection signal="infect_animation_finished" from="Graphics/infect_pivot" to="StateMachine/infect" method="_on_infect_animation_finished"]
[connection signal="animation_finished" from="Graphics/AnimationPlayer" to="Graphics/infect_pivot" method="_on_AnimationPlayer_animation_finished"]
[connection signal="mouse_entered" from="Triggers/MouseHurtbox" to="InputController" method="set_is_mouse_colliding" binds= [ true ]]
[connection signal="mouse_exited" from="Triggers/MouseHurtbox" to="InputController" method="set_is_mouse_colliding" binds= [ false ]]
